tests/valid_inputs/while_post_cond.cpp

int main() {
	int i = 5, res = 0;
	while(i <= 4) {
		res = res+i;
		i = i+1;
	}
	return res;
}
