tests/invalid_inputs/sema/assign_into_array.cpp

int main() {
	int arr1[5], arr2[5];
	arr1 = arr2;
}
